--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,7 @@
     "lint": "biome lint",
     "format": "biome format"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -26,3 +23,4 @@
     "@biomejs/biome": "1.8.3"
   }
 }
+
