--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -23,4 +24,3 @@
     "@biomejs/biome": "1.8.3"
   }
 }
-
