--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,12 @@
+dist
 node_modules
-# Keep environment variables out of version control
+
+# local env files
 .env
+.env.local
+.dev.vars
+
+
+# logs
+combined.log
+error.log
